# Agent-Trust-Network

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  deploy.sh  deploy_broker.sh  deploy_demo.sh  deploy_proxy.sh  docker-compose.proxy.dev.yml  docker-compose.proxy.standalone.yml  docker-compose.proxy.yml  docker-compose.yml  generate_certs.py  proxy.env.example  pyproject.toml  pytest.ini  requirements.txt  setup.sh
agents/: manufacturer.py  sdk.py
app/: config.py  e2e_crypto.py  main.py  spiffe.py  telemetry.py  telemetry_metrics.py
cullis_connector/: README.md  __init__.py  autostart.py  cli.py  enrollment.py  inbox_poller.py  notifier.py  web.py
cullis_sdk/: __init__.py  _env.py  _logging.py  auth.py  client.py  types.py
demo/: demo_commands.md
demo_network/: README.md  compose.yml  smoke.sh  standalone.compose.yml  standalone_smoke.sh
docs/: index.html  k8s-quickstart.md  multivm-runbook.md  ops-runbook.md  spiffe-onboarding.md
enterprise-kit/: BYOCA.md  quickstart.sh
enterprise_sandbox/: README.md  demo.sh  docker-compose.yml  smoke.sh
mcp_proxy/: Dockerfile  config.py  db.py  db_models.py  logging_setup.py  main.py  models.py  requirements-proxy.txt  tools.yaml
nginx/: nginx.conf
nginx-proxy/: nginx.conf
reference/: README.md  docker-compose.yml  smoke.sh
sandbox/: docker-compose.yml  smoke.sh
scripts/: generate-env.sh  generate-proxy-env.sh  shake-out-manual.md
sdk-ts/: README.md  package-lock.json  package.json  tsconfig.json
tests/: conftest.py  test_a2a_agent_card.py  test_admin_dpop_jwk.py  test_admin_secret_local_kms_dir.py  test_health.py  (+95 more)
(+325 files in other folders)
