[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cullis-agent-sdk"
version = "0.1.0"
description = "Python SDK for Cullis — federated agent trust broker"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.24.0",
    "cryptography>=41.0.0",
    "PyJWT[crypto]>=2.8.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
connector = [
    "mcp>=1.0",
    "PyYAML>=6.0",
    "bcrypt>=4.0",
]
dashboard = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    # OS-native desktop notifications for the inbox poller.
    # plyer is a thin wrapper around libnotify (Linux), NSUserNotification
    # (macOS) and Windows Toast — falls back to stderr when missing so
    # `connector` deploys without `dashboard` keep working.
    "plyer>=2.1",
]
spiffe = [
    "spiffe>=0.2.0",
]

[project.scripts]
cullis-connector = "cullis_connector.cli:main"
cullis-proxy = "mcp_proxy.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["cullis_sdk", "cullis_connector"]

[tool.hatch.build.targets.wheel.shared-data]
# Ship the dashboard templates + static assets alongside the Python code.
# Without this the PyInstaller bundle (Day 3) misses Jinja templates and
# the pip install misses the stylesheet.

[tool.hatch.build.targets.wheel.force-include]
"cullis_connector/templates" = "cullis_connector/templates"
"cullis_connector/static" = "cullis_connector/static"
